# TemplateForPythonProjects

./: .gitignore  LICENSE  README.md  custom_badges.md  pyproject.toml  pytest.ini
.github/workflows/: count_locs  pages.yml  python_ci.yml
docs/: conf.py  index.rst
latest/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_modules/template_for_python_projects/example/: minus.html  plus.html
latest/_modules/test3/example/: minus.html  plus.html
latest/_sources/apidocs/: modules.rst.txt  template_for_python_projects.example.rst.txt  template_for_python_projects.numpy_example.rst.txt  template_for_python_projects.numpy_example.sum_over_array.rst.txt  template_for_python_projects.rst.txt  test3.example.minus.rst.txt  test3.example.plus.rst.txt  test3.example.rst.txt  test3.rst.txt
latest/apidocs/: modules.html  template_for_python_projects.example.minus.html  test3.example.minus.html
src/template_for_python_projects/: __init__.py
src/template_for_python_projects/example/: __init__.py  minus.py  plus.py
src/template_for_python_projects/numpy_example/: __init__.py  sum_over_array.py
src/test3/: __init__.py
src/test3/example/: minus.py  plus.py
stable/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
stable/_modules/: index.html
stable/_modules/template_for_python_projects/numpy_example/: sum_over_array.html
stable/_sources/: index.rst.txt
stable/_sources/apidocs/: modules.rst.txt  template_for_python_projects.example.minus.rst.txt  template_for_python_projects.example.plus.rst.txt  template_for_python_projects.rst.txt
stable/apidocs/: template_for_python_projects.example.html  template_for_python_projects.example.plus.html  template_for_python_projects.html  template_for_python_projects.numpy_example.html  template_for_python_projects.numpy_example.sum_over_array.html  test3.example.html  test3.example.plus.html  test3.html
tests/example/: test_minus.py  test_plus.py
tests/numpy_example/: sum_over_array.py
