[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test3"
authors = [
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},
     ]
description = "TODO"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "Test",
    "TODO",
    "ETC",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning"
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/frehburg/test3"
repository = "https://github.com/frehburg/genophenocorr.git"
documentation = "https://frehburg.github.io/test3/stable"
bugtracker = "https://github.com/frehburg/genophenocorr/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "genophenocorr.__version__" }
