[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template_for_python_projects"
authors = [
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},
     ]
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Test",
    "TODO",
    "ETC",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning"
]
dependencies = [
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0", "pytest-cov"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/frehburg/template_for_python_projects"
repository = "https://github.com/frehburg/template_for_python_projects.git"
documentation = "https://frehburg.github.io/template_for_python_projects/stable"
bugtracker = "https://github.com/frehburg/template_for_python_projects/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "template_for_python_projects.__version__" }

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
sample = "sample:main"
